--- a/polecam.html
+++ b/polecam.html
@@ -20,7 +20,7 @@
     </header>
     <section>
         <h2>Moje polecane książki</h2>
-		 <img src="ks.PNG" alt="pulpit" width="678" height="250" />
+		 <img src="k.jpg"  width="678" height="250" />
         <ul>
             <li>Sapiens autor:Harari Yuval Noah</li>
             <li>Alchemik autor:Paulo Coelho</li>
