--- a/polecam.html
+++ b/polecam.html
@@ -22,16 +22,16 @@
         <h2>Moje polecane książki</h2>
 		 <img src="k.jpg"  width="678" height="250" />
         <ul>
-            <li>Sapiens autor:Harari Yuval Noah</li>
-            <li>Alchemik autor:Paulo Coelho</li>
-            <li>Cień Wiatru autor:Carlos Ruiz Zafon</li>
+            <li>Sapiens autor: Harari Yuval Noah,https://histmag.org/Yuval-Noah-Harari-Sapiens.-Od-zwierzat-do-bogow-recenzja-i-ocena-17631  </li>
+            <li>Alchemik autor:Paulo Coelho, https://eszkola.pl/jezyk-polski/alchemik-2807.html</li>
+            <li>Cień Wiatru autor:Carlos Ruiz Zafon,https://sztukater.pl/ksiazki/item/9500-la-sombra-del-viento.html#:~:text=Daniel%20Sempere%2C%20zauroczony%20powie%C5%9Bci%C4%85%20tajemniczego,prze%C5%BCywanie%20mi%C5%82o%C5%9Bci%20i%20zdobywanie%20przyja%C5%BAni. </li>
         </ul>
         <h2>Moje polecane filmy</h2>
 		 <img src="f.jpg" alt="pulpit" width="678" height="250" />
         <ul>
-            <li>3 metry nad niebem</li>
-            <li>Klub winowajców</li>
-            <li>Stowarzyszenie Umarłych Poetów</li>
+            <li>3 metry nad niebem, https://www.filmweb.pl/film/Trzy+metry+nad+niebem-2010-571889</li>
+            <li>Klub winowajców, https://www.filmweb.pl/film/Klub+winowajc%C3%B3w-1985-31294</li>
+            <li>Stowarzyszenie Umarłych Poetów,https://www.filmweb.pl/film/Stowarzyszenie+Umar%C5%82ych+Poet%C3%B3w-1989-1262 </li>
         </ul>
         <h2>Moje polecane gry</h2>
 		 <img src="g.jpg" alt="pulpit" width="678" height="250" />
